Fixed Title Spacing

--- a/seng513/assignment1/main.css
+++ b/seng513/assignment1/main.css
@@ -41,7 +41,6 @@
     text-align: center;
     border-radius: 30px;
     margin: 20px;
-    margin-top: 40px;
 }
 .subpage-wrapper {
     text-align: left;
